--- a/lustre/ChangeLog
+++ b/lustre/ChangeLog
@@ -1,3 +1,13 @@
+2014-04-3 Xyratex, Inc
+	* version 1.8.9
+	* Support for kernels:
+	  2.6.32-279.2.1.el6
+	* Client support for unpatched kernels:
+	  2.6.32-279.2.1.el6
+	  2.6.32-431.5.1.el6
+	* Recommended e2fsprogs version: 1.42.6.x1
+	* The async journal commit feature (bug 19128) is off by default
+
 2013-01-22 Oracle, Inc.
 	* version 1.8.8
 	* Support for kernels:
