MRP-2091 mgs: remove skip records from config file
Configuration logs are append only files of limited size. In course of
time the logs may grow over the limit size. Usually, configuration
logs keep needless records marked as SKIP. The new lctl command
"clear_conf" is added to allow administartors to clear configuration
files by removing mentioned SKIP records.
lctl man page is updated.
conf-sanity test is added to test the new command.

Change-Id: Iee71234442c7e2fcc289955d11e055e2e86377a4
Signed-off-by: Vladimir Saveliev <vladimir.saveliev@seagate.com>
Reviewed-on: http://es-gerrit.xyus.xyratex.com:8080/4003
Reviewed-by: Artem Blagodarenko <artem_blagodarenko@xyratex.com>
Tested-by: Jenkins
Reviewed-by: Alexey Lyashkov <alexey_lyashkov@xyratex.com>
Tested-by: Elena Gryaznova <elena.gryaznova@seagate.com>
Reviewed-by: Vitaly Fertman <vitaly.fertman@seagate.com>

--- a/lustre/doc/lctl.8
+++ b/lustre/doc/lctl.8
@@ -284,6 +284,15 @@ Unregister an existing changelog user.  If the user's "clear" record number
 is the minimum for the device, changelog records will be purged until the
 next minimum.  
 .PP
+.SS Configuration logs
+.TP
+.BI clear_conf " <device|fsname>"
+This command runs on MGS node having MGS device mounted with -o
+nosvc. It cleanups configuration files (those which stored in
+CONFIGS/) of records marked SKIP-ed. If filesystem name is given, then
+all configation files are cleaned. Otherwise, specific log
+(ex. lustre-MDT0000) is handled.
+.PP
 .SS Debug
 .TP 
 .BI debug_daemon 
